--- a/src/main/resources/templates/jk/seller/navbar.html
+++ b/src/main/resources/templates/jk/seller/navbar.html
@@ -33,8 +33,8 @@
                     <div class="collapse" id="collapseLayouts2" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="#!">주문</a>
-                            <a class="nav-link" href="#!">배송</a>
+                            <a class="nav-link" th:href="@{/seller/order/search.do}">주문</a>
+                            <a class="nav-link" th:href="@{/seller/delivery/search.do}">배송</a>
                         </nav>
                     </div>
 
@@ -48,8 +48,8 @@
                     <div class="collapse" id="collapseLayouts3" aria-labelledby="headingOne"
                         data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="#!">등록</a>
-                            <a class="nav-link" href="#!">관리</a>
+                            <a class="nav-link" th:href="@{/seller/item/management.do}">등록</a>
+                            <a class="nav-link" th:href="@{/seller/item/search.do}">관리</a>
                         </nav>
                     </div>
 
