--- a/src/main/resources/templates/ikh/seller/order/search.html
+++ b/src/main/resources/templates/ikh/seller/order/search.html
@@ -402,6 +402,67 @@
                             </div>
                         </div>
 
+                        <div id="cov">
+                            <div class="row" style="margin-top: 15px;">
+                                <div class="col">
+                                    <div class="card mb-4">
+                                        <div class="card-header">
+                                            <i class="fas fa-table me-1"></i>
+                                            공구완료
+                                        </div>
+                                        <div class="card-body">
+                                            <table id="datatablesSimplecov">
+                                                <thead>
+                                                    <tr>
+                                                        <th>주문번호</th>
+                                                        <th>물품코드</th>
+                                                        <th>물품이름</th>
+                                                        <th>배송주소</th>
+                                                        <th>대표주문자</th>                                                        
+                                                        <th>인원수</th>
+                                                        <th>일자</th>
+                                                        <th>참가인원</th>                                                        
+                                                    </tr>
+                                                </thead>
+                                                <tfoot>
+                                                    <tr>
+                                                        <th>주문번호</th>
+                                                        <th>물품코드</th>
+                                                        <th>물품이름</th>
+                                                        <th>배송주소</th>
+                                                        <th>대표주문자</th>                                                        
+                                                        <th>인원수</th>
+                                                        <th>일자</th>
+                                                        <th>참가인원</th>
+                                                    </tr>
+                                                </tfoot>
+                                                <tbody>
+                                                    <tr th:each="obj, iterStat : ${covlist}">                                                    
+                                                        <td th:text="${obj.pno.longValue()}"></td>
+                                                        <td th:text="${obj.itemcode.longValue()}"></td>
+                                                        <td th:text="${obj.itemname}"></td>
+                                                        <td th:text="${obj.address}"></td>
+                                                        <td th:text="${obj.memid}"></td>
+                                                        <td th:text="${obj.count} + ' / ' + ${obj.participant}"></td>
+                                                        <td th:text="${#dates.format(obj.regdate, 'yyyy년 MM월 dd일 E요일 HH시 mm분')}"></td>
+                                                        <td>
+                                                            <form th:action="@{/seller/order/search.do}" method="get">
+                                                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" id="pnonumbers"
+                                                                name="pnonumber" th:onclick="dvclick([[${iterStat.index}]], [[${obj.pno}]])">
+                                                                    <!-- th:attr="id='dvact' + ${iterStat.index}" -->
+                                                                    모달
+                                                                </button>
+                                                            </form>
+                                                        </td>
+                                                    </tr>                                            
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
@@ -420,6 +481,39 @@
         </div>
     </div>
 
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">참가 인원</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>닉네임</th>
+                            <th>공구참여시간</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="obj : ${comvlist}">     
+                            <td th:text="${obj.memid}"></td>
+                            <td th:text="${obj.nickname}"></td>
+                            <td th:text="${#dates.format(obj.regdate, 'yyyy년 MM월 dd일 E요일 HH시 mm분')}"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
+                <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
     <!-- 6. Bootstrap용 js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
@@ -436,7 +530,45 @@
         integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
-    <script>
+    <script th:inline="javascript" type="text/javascript">
+        const myModal = document.getElementById('myModal');
+        const myInput = document.getElementById('myInput');
+
+        async function dvclick(index, pno) {
+            // document.getElementById('pnonumberhidden').setAttribute('value', pno);
+            var value = document.getElementById('pnonumbers').value;
+            console.log("index : " + index);
+            console.log("pno : " + pno);
+            console.log("value : " + value);                                    
+            
+            let url = /*[[@{/api/seller/delivery.json}]]*/"";
+            url += "?pnonumber=" + pno;
+            console.log(url);
+            const headers = {"Content-Type":"application/json"};
+            console.log(headers);
+            const { data } = await axios.get(url,{ headers:headers });
+            console.log(data);
+        }
+
+        // async function uploadFiles() {
+        //         const images = document.getElementById('images');
+        //         let url = /*[[@{/api/seller/insertimages.json}]]*/"";
+        //         url += "?images=" + images.value;
+        //         console.log(url);
+        //         const headers = {"Content-Type":"application/json"};
+        //         console.log(headers);
+        //         const { data } = await axios.get(url,{ headers:headers });
+                
+        //         console.log(data.message);
+        //         console.log(data.result);   
+        //         if(data.result === 1){
+        //             document.getElementById('form1').submit();
+        //         }
+        //         else if( data.result === 0){
+        //             alert("이미지를 1개 이상 선택해주세요.");
+        //         }
+        //     }
+        // ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
         function all0(){
             document.getElementById('all').style.display = 'block'
             document.getElementById('zero').style.display = 'none'
@@ -519,9 +651,13 @@
                 fixedHeight: true,
             })
         });
-        
-        
-    
+
+        $(document).ready(function () {
+            new simpleDatatables.DataTable("#datatablesSimplecov", {
+                searchable: true,
+                fixedHeight: true,
+            })
+        });
     </script>
 </body>
 
