--- a/src/main/resources/templates/gr/customer/mylikeitem.html
+++ b/src/main/resources/templates/gr/customer/mylikeitem.html
@@ -362,7 +362,7 @@
         <div class="liktitem_box d-flex justify-content-center">
             <div class="likeitem_titlebox d-flex justify-content-center">
                 <div class="likeitem_title ">
-                    <h3>PRODUCT(</h3><h3 th:text="${ret}"></h3><h3>)</h3>
+                    <h3>PRODUCT(</h3><h3 th:text="${ret}" id="ret"></h3><h3>)</h3>
                 </div>
             </div>
         </div>
@@ -419,6 +419,7 @@
 
 
     <!-- script-->
+ 
     
 </body>
 </html>
