--- a/src/main/resources/templates/se/customer/home.html
+++ b/src/main/resources/templates/se/customer/home.html
@@ -220,6 +220,7 @@
     <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
 
     <script>
+        // 마우스 오버 ----------------------------------------------------------------------------------
         const mouseOverAction = (idx) => {
             const itemCover1 = document.getElementsByName('itemCover1')[idx];
             itemCover1.style.visibility = 'visible';
@@ -229,6 +230,7 @@
             const itemCover1 = document.getElementsByName('itemCover1')[idx];
             itemCover1.style.visibility = 'collapse';
         }
+        // 마우스 오버
     </script>
 
 </body>
