--- a/src/main/resources/templates/se/customer/header.html
+++ b/src/main/resources/templates/se/customer/header.html
@@ -242,6 +242,37 @@
             background: rgba(33, 122, 244, .1);  /*스크롤바 뒷 배경 색상*/
         }
 
+        /* 알림버튼 */
+        .notiBtn {
+            position: relative;
+            border: 0;
+            background-color: transparent;
+            padding: 0;
+            margin-left: 8px;
+        }
+
+        .notiAction {
+            width: 48px;
+            height: 48px;
+            background-color: rgba(105, 146, 120, 0.8);
+            border-radius: 24px;
+        }
+
+        .notiAction1 {
+            position: absolute;
+            width: 7px;
+            height: 7px;
+            border-radius: 3.5px;
+            left: 30px;
+            top: -2px;
+            background-color: #ff0000;
+            box-shadow:  0 .125rem .25rem rgba(0, 0, 0, .075);
+            display: none;
+        }
+
+        .notiBtn svg {
+        }
+
         </style>
     </th:block>
 </head>
@@ -258,6 +289,9 @@
                     <div class="middle"></div>
                     <div class="bottom"></div>
                     </label>
+                    <th:block th:if="${user} != null">
+                        
+                    </th:block>
                 </div>
                 <div class="col-4">
                     <div class="row">
@@ -273,14 +307,19 @@
                 <div class="myPage col d-flex align-items-center flex-row-reverse">
                     <div class="row d-flex justify-content-end">
                         <th:block th:if="${user} != null">
-                            <div class="col-auto">
+                            <div class="col-auto d-flex align-items-center">
                                 <button type="button" class="logoutBtn" th:onclick="logoutAction([[${user.username}]])">로그아웃</button>
                             </div>
                             <div class="col-auto">
-                                <a th:href="@{/customer/mypage.do}">
+                                <a th:href="@{/customer/mypage.do}" style="display: inline-block;">
                                     마이페이지
-                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="fill: #204710;"><path d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"></path></svg>
+                                    <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="fill: #204710;"><path d="M10.561 8.073a6.005 6.005 0 0 1 3.432 5.142.75.75 0 1 1-1.498.07 4.5 4.5 0 0 0-8.99 0 .75.75 0 0 1-1.498-.07 6.004 6.004 0 0 1 3.431-5.142 3.999 3.999 0 1 1 5.123 0ZM10.5 5a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Z"></path></svg> -->
                                 </a>
+                                <!-- 알림 -->
+                                <button type="button" class="notiBtn" id="notiBtn">
+                                    <div class="notiAction1"></div>
+                                    <svg class="mx-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" style="fill: #204710;"><path d="M8 16a2 2 0 0 0 1.985-1.75c.017-.137-.097-.25-.235-.25h-3.5c-.138 0-.252.113-.235.25A2 2 0 0 0 8 16ZM3 5a5 5 0 0 1 10 0v2.947c0 .05.015.098.042.139l1.703 2.555A1.519 1.519 0 0 1 13.482 13H2.518a1.516 1.516 0 0 1-1.263-2.36l1.703-2.554A.255.255 0 0 0 3 7.947Zm5-3.5A3.5 3.5 0 0 0 4.5 5v2.947c0 .346-.102.683-.294.97l-1.703 2.556a.017.017 0 0 0-.003.01l.001.006c0 .002.002.004.004.006l.006.004.007.001h10.964l.007-.001.006-.004.004-.006.001-.007a.017.017 0 0 0-.003-.01l-1.703-2.554a1.745 1.745 0 0 1-.294-.97V5A3.5 3.5 0 0 0 8 1.5Z"></path></svg>
+                                </button>
                             </div>
                         </th:block>
                         <th:block th:if="${user} == null">
@@ -441,6 +480,23 @@
             logoutform.submit();
         }
         
+
+        // 알림기능 ----------------------------------------------------------------------------------
+        var user = /*[[${user}]]*/"";
+
+        if(user){
+            // alert(user.username);
+            const id = user.username;
+            const eventSource = new EventSource(`/SOBUN/api/sse/notify/subscribe?id=${id}`);
+
+            eventSource.onmessage = (e) => { // 메시지가 왔을 때
+                console.log('onmessage', e.data);
+                // document.querySelector('.notiBtn').classList.add('notiAction');
+                document.querySelector('.notiAction1').style.display = 'block';
+            }
+
+        }
+        // 알림기능
     </script>
 
 </th:block>
